--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@rn-primitives/navigation-menu": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "~1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
     "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.1.3",
@@ -38,6 +40,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
@@ -45,7 +48,10 @@
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "expo-image": "~2.4.0",
+    "expo-file-system": "~18.1.11",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
