--- a/package.json
+++ b/package.json
@@ -13,20 +13,33 @@
     "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.1.6",
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.2.0",
+    "@rn-primitives/checkbox": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/navigation-menu": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
+    "@rn-primitives/radio-group": "^1.2.0",
     "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "~1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
+    "@rn-primitives/toast": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
+    "expo-file-system": "~18.1.11",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
     "expo-navigation-bar": "~4.2.4",
@@ -39,19 +52,20 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-native": "0.79.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "expo-image": "~2.4.0",
-    "expo-file-system": "~18.1.11",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
