--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.6",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
@@ -22,10 +23,14 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-switch": "^1.2.5",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-firebase/crashlytics": "^22.4.0",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/alert-dialog": "^1.2.0",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/checkbox": "^1.2.0",
+    "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/navigation-menu": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
@@ -39,6 +44,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
+    "expo-build-properties": "^0.14.8",
     "expo-file-system": "~18.1.11",
     "expo-image": "~2.4.0",
     "expo-image-picker": "^16.1.4",
@@ -49,6 +55,7 @@
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
+    "firebase": "^12.0.0",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -71,6 +78,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.0.14",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.8.3"
   },
   "private": true
