--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@rn-primitives/switch": "^1.2.0",
     "@rn-primitives/toast": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
@@ -69,6 +70,7 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.3",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
