--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
     "expo-build-properties": "^0.14.8",
+    "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
     "expo-image": "~2.4.0",
     "expo-image-picker": "^16.1.4",
