--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@babel/core": "^7.26.0",
     "@types/react": "~19.0.14",
     "react-native-dotenv": "^3.4.11",
+    "@react-native-community/cli": "latest",
     "typescript": "^5.8.3"
   },
   "private": true
