--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
     "firebase": "^12.0.0",
+    "lottie-react-native": "^7.2.5",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -67,6 +68,7 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
@@ -81,9 +83,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.0.14",
     "react-native-dotenv": "^3.4.11",
-    "@react-native-community/cli": "latest",
     "typescript": "^5.8.3"
   },
   "private": true
