--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 FIREBASE_API_KEY=AIzaSyD_X4vQGbXcAhV6iqT3jZEEJNXK86vQrnI
-APP_BASE_URL="202.10.47.154:5000"
+APP_BASE_URL="http://202.10.47.154:5000"
 # APP_BASE_URL="http://10.0.2.2:5000"
